fixed overflowing on mobile

--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -238,9 +238,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: inline-block;
 }
 .banner h1 {
-  font-size: 65px;
+  font-size: 50px;
   font-weight: 700;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.7px;
   line-height: 1;
   margin-bottom: 20px;
   display: block;
@@ -280,6 +280,17 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   transform: scale(0.7);
   border-radius: 10%;
 
+}
+
+@media (max-width:500px) {
+  .banner h1 {
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+    line-height: 1;
+    margin-bottom: 20px;
+    display: block;
+  }
 }
 
 @keyframes updown {
